@startuml
'https://plantuml.com/class-diagram

class Measurement extends measurement.entities.measurement.Measurement {
    scan_modules{} : ScanModule
    machine{} : MeasureData | MonitorData
    beamline{} : MeasureData | MonitorData
    device_snapshots{} : MeasureData
    metadata : Metadata
    scan : Scan
    station : Station
    log_messages[] : LogMessage
    data : Data

    load(filename)
    save(filename)
    export(filename, format)
    set_data(name, field)
    set_axes(names[], fields[])
}

Measurement *-- measurement.entities.metadata.Metadata
Measurement *-- evefile.entities.file.Scan
Measurement *-- evefile.entities.file.Station

class evefile.entities.file.Scan {
}

class evefile.entities.file.Station {
}


class measurement.entities.measurement.Data {
    data : np.ndarray
    axes[]: AxisData
    metadata : DeviceMetadata
}

class measurement.entities.measurement.Axis {
    data : np.ndarray
    label: string
    quantity : string
    symbol : string
    unit : string
}

Data *-"n" Axis

Data -* Measurement

measurement.entities.metadata.Metadata -[hidden]-> Measurement

measurement.entities.measurement.Data -[hidden]> Measurement

@enduml